--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,26 @@ services:
       - 8000:8000
     depends_on:
       - db
+      - redis
+
+  celery:
+    build: .
+    command: celery -A django_project worker --loglevel=info
+    volumes:
+      - .:/code
+    depends_on:
+      - redis
+      - db
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6380:6379"
+
+
   db:
     image: postgres:13
     volumes:
